--- a/etc/conf/ftpd.conf
+++ b/etc/conf/ftpd.conf
@@ -1,3 +1,5 @@
+# logfile /var/log/vsftpd.log
+
 # ftp ログイン
 watchfor /OK LOGIN/
          exec "\/usr\/local\/bin\/slack_notify.sh $* > /dev/null 2>&1"
