--- a/etc/conf/secure.conf
+++ b/etc/conf/secure.conf
@@ -1,4 +1,5 @@
 watchfor /Accepted/
+		echo
         exec "\/usr\/local\/bin\/slack_notify.sh $* > /dev/null 2>&1"
 
 ### ssh失敗検知
@@ -13,4 +14,5 @@ watchfor /Accepted/
 
 ### sudo実行検知
 watchfor /.*COMMAND.*/
-         exec "\/usr\/local\/bin\/slack_notify.sh $* > /dev/null 2>&1"
+		echo
+        exec "\/usr\/local\/bin\/slack_notify.sh $* > /dev/null 2>&1"
