Update for ver 1.0.0

--- a/etc/conf/ftpd.conf
+++ b/etc/conf/ftpd.conf
@@ -2,10 +2,9 @@
 
 # ftp ログイン
 watchfor /OK LOGIN/
-		echo
-         exec "\/usr\/local\/bin\/slack_notify.sh $* > /dev/null 2>&1"
+        exec "\/usr\/local\/bin\/slack_notify $* > /dev/null 2>&1"
 
 
  # ftp コネクション
  #watchfor /CONNECT/
-#         exec "\/usr\/local\/bin\/slack_notify.sh $* > /dev/null 2>&1"
+#         exec "\/usr\/local\/bin\/slack_notify $* > /dev/null 2>&1"
