--- a/etc/conf/secure.conf
+++ b/etc/conf/secure.conf
@@ -1,18 +1,16 @@
 watchfor /Accepted/
-		echo
-        exec "\/usr\/local\/bin\/slack_notify.sh $* > /dev/null 2>&1"
+        exec "\/usr\/local\/bin\/slack_notify $* > /dev/null 2>&1"
 
 ### ssh失敗検知
 #watchfor /Invalid user/
 #        echo
-#        exec "\/usr\/local\/bin\/slack_notify.sh $* > /dev/null 2>&1"
+#        exec "\/usr\/local\/bin\/slack_notify $* > /dev/null 2>&1"
 
 ### ssh失敗検知
 #watchfor /Failed/
 #        echo
-#        exec "\/usr\/local\/bin\/slack_notify.sh $* > /dev/null 2>&1"
+#        exec "\/usr\/local\/bin\/slack_notify $* > /dev/null 2>&1"
 
 ### sudo実行検知
 watchfor /.*COMMAND.*/
-		echo
-        exec "\/usr\/local\/bin\/slack_notify.sh $* > /dev/null 2>&1"
+        exec "\/usr\/local\/bin\/slack_notify $* > /dev/null 2>&1"
