--- a/etc/swatcher.service
+++ b/etc/swatcher.service
@@ -1,13 +1,13 @@
-Unit]
-Description=swatcher daemon
+[Unit]
+Description=swatch daemon
+After=syslog.target network.target
 
 [Service]
 Type=forking
-PIDFile=/var/run/swatcher/swatcher.pid
-ExecStart=/usr/local/bin/swatcher.sh
-ExecReload=/bin/kill -HUP $MAINPID
-ExecStop=/bin/kill -HUP $MAINPID
-PrivateTmp=true
+ExecStart=/etc/init.d/start_swatcher.sh
+;ExecReload=/bin/kill -HUP $MAINPID
+ExecStop=/etc/init.d/stop_swatcher.sh
+Restart=always
 
 [Install]
 WantedBy=multi-user.target
